--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,10 +21,10 @@
               <a class="nav-link" aria-current="page" href="/about">About Me</a>
             </li>
           </ul>
-          <!-- <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form> -->
+          <form class="d-flex" action="{{ site.baseurl }}/search.html" method="get">
+              <input class="form-control me-2" type="search" id="search-box" name="query" aria-describedby="searchButton" placeholder="Search Posts" aria-label="Search">
+              <button class="btn btn-outline-secondary" value="search" type="submit" id="searchButton">Search</button>
+          </form>
         </div>
       </div>
     </nav>
