--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,61 @@
 ---
 layout: default
 ---
-<h1>{{ page.title }}</h1>
-<p>{{ page.date | date_to_string }} - {{ page.author }}</p>
+<div class="row">&nbsp;</div>
+<div class="row">
+  <div class="col-md-9">
+    <h1>{{ page.title }}</h1>
+    {% if page.end_date != "ongoing" %}
+      <p>{{ page.date | date_to_string }} - {{ page.end_date | date_to_string }} | Author: {{ page.author }}</p>
+    {% else %}
+      <p>{{ page.date | date_to_string }} - {{ page.end_date }} | Author: {{ page.author }}</p>
+    {% endif %}
 
-{{ content }}
+    {{content}}
 
-{% for tag in page.tags %}
-<span class="badge rounded-pill bg-light text-dark">{{tag}}</span>
-{% endfor %}
+    {% for tag in page.tags %}
+    <span class="badge rounded-pill bg-light text-dark">{{tag}}</span>
+    {% endfor %}
+  </div>
+  <div class="col-md-3 d-none d-md-block">
+    {% if page.toc != false %}
+      <h2>Table of Contents</h2>
+      {% include toc.html html=content id="toc" %}
+    {% endif %}
+    
+    <br>
+    {% if page.github_url or page.youtube_url or page.dropbox_url or page.other_url %}
+      <h2>Links</h2>
+    {% endif %}
+    <div class="row justify-content-center">
+      {% if page.github_url %}
+        <div class="col-2">
+          <a type="button" href="{{ page.github_url }}" class="btn btn-outline-primary">
+            <i class="fa-brands fa-github"></i>
+          </a>
+        </div>
+      {% endif %}
+      {% if page.youtube_url %}
+        <div class="col-2">
+          <a type="button" href="{{ page.youtube_url }}" class="btn btn-outline-primary">
+            <i class="fa-brands fa-youtube"></i>
+          </a>
+        </div>
+      {% endif %}
+      {% if page.dropbox_url %}
+      <div class="col-2">
+        <a type="button" href="{{ page.dropbox_url }}" class="btn btn-outline-primary">
+          <i class="fa-brands fa-dropbox"></i>
+        </a>
+      </div>
+      {% endif %}
+      {% if page.other_url %}
+      <div class="col-2">
+        <a type="button" href="{{ page.other_url }}" class="btn btn-outline-primary">
+          <i class="fa-solid fa-earth-americas"></i>
+        </a>
+      </div>
+      {% endif %}
+    </div>
+  </div>
+</div>
